<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Actions -->
    <string name="action_save">Save</string>
    <string name="action_remove">Remove</string>
    <!-- Create item bottomsheet -->
    <string name="action_login">Login</string>
    <string name="action_alias">Alias</string>
    <string name="action_note">Note</string>
    <string name="action_credit_card">Credit card</string>
...
    <string name="sl_note_info_message_part2">Not even Proton or SimpleLogin can see it.</string>
    <string name="sl_note_info_message_part3">SimpleLogin note is stored together in the same location with alias address and while it is protected by encryption at rest, it isn\'t E2E encrypted meaning anyone who has access to SimpleLogin database can read it.</string>
    <string name="sl_note_info_content_description">Show SL note information dialog</string>
    <!-- Create note -->
    <string name="note_hint">Note</string>
    <!-- Create Credit Card -->
    <string name="field_cardholder_name_title">Name on card</string>
    <string name="field_cardholder_name_hint">Full name</string>
    <string name="field_card_number_title">Card number</string>
    <string name="field_card_number_hint">1234 1234 1234 1234</string>
    <string name="field_card_cvv_title">Security code</string>
    <string name="field_card_cvv_hint">123</string>
    <string name="field_card_pin_title">PIN</string>
    <string name="field_card_pin_hint">123456</string>
    <string name="field_card_expiration_date_title">Expiration date</string>
    <string name="field_card_expiration_date_hint">MM/YY</string>
    <string name="field_card_expiration_date_error">Enter a valid date in MM/YY format</string>
    <string name="create_credit_card_item_creation_error">Could not create credit card</string>
    <string name="create_credit_card_item_creation_success">Credit card created</string>
    <string name="credit_card_init_error">Problem retrieving credit card details</string>
    <string name="update_credit_card_attachments_init_error">Problem retrieving credit card attachments</string>
...
    <string name="title_create">Create</string>
    <string name="changes_saved">Changes saved</string>
    <!--  TOTP  -->
    <string name="totp_create_login_field_title">2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_invalid">Invalid 2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_placeholder">Add 2FA secret key (TOTP)</string>
    <string name="close_scree_icon_content_description">Close screen button</string>
    <string name="totp_paste_code_action">Paste code</string>
    <string name="totp_scan_code_action">Scan code</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="camera_permission_explanation">Camera permission required for this feature to be available.</string>
    <string name="camera_permission_open_settings">Open settings</string>
    <!--  TOTP limit  -->
...
